2010-07-24  Stas Boukarev  <stassats@gmail.com>

	* swank-package-fu.lisp (export-symbol-for-emacs): Fix typo.

	* slime-sprof.el (slime-sprof-start-alloc)
	(slime-sprof-start-time): New functions to start profiling in
	:alloc and :time mode. The default slime-sprof-start is :cpu.
	* swank-sprof.lisp (swank-sprof-start): Accept :mode keyword.

2010-07-24  Stas Boukarev  <stassats@gmail.com>

	* slime-package-fu.el (slime-export-structure): New function,
	export all constructors, accessors, etc.
	* swank-package-fu.lisp (export-structure): Lisp side of the above
	function, works only on SBCL for now.

2010-07-23  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (arglist-dispatch): Export it, so it may be
	extended more easily.

	* slime-fancy-inspector.el (slime-fancy-inspector): Add
	slime-parse dependency.

2010-07-16  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-call-defun): Handle setf-functions.

2010-07-04  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf:operation-done-p): Fix reloading on
	ASDF2. ASDF2 no longer has `asdf:around' method combination.

2010-07-02  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (docstring-ispec): Don't insert an
	unnecessary space.
	(emacs-inspect): Delete unnecessary "it" in [... it]
	buttons.
	Don't capitalize every word in some messages.

2010-06-15  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-central-registry): Use an exported
	interface for ASDF2.

2010-06-14  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-central-registry): ASDF2 compatibility.
	Patch by Leo Liu.

2010-06-04  Helmut Eller  <heller@common-lisp.net>

	* inferior-slime.el (inferior-slime-show-transcript): Update
	window point

2010-05-29  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (emacs-inspect): Add [finalize]
	button for not finalized classes.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	Call provide at the end of the file.
